--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
 
 <body>
     <!-- Main sec -->
-    <div class="container my-5 mx-auto"">
-        <h1 class=" text-center my-4">Cloud Cover</h1>
-        <form class="city-form text-center my-4 change-location d-flex flex-column">
+    <div class="container my-5 mx-auto img">
+        <h1 class=" text-center text-info my-4">Cloud Cover</h1>
+        <form class="city-form text-center text-black my-4 change-location d-flex flex-column">
             <label for="">Enter location for weather information</label>
             <input type="text" name="city" class="form-control my-3 py-3">
         </form>
+
         <!-- weather information -->
         <div class="card d-none shadow-lg rounded-2 color">
             <img src="" alt="" class="time-image">
